syntax = "proto3";

package singleuseronline;
// 定义server提供的功能

service SingleUserOnline{

    // sign up a new account
    rpc SignUp(LoginInfo) returns (ResultInfo){};
    // logout
    rpc Logout(LoginInfo) returns (ResultInfo){};
    // live-statue, stream to stream
    rpc KeepAliveStream(stream LoginInfo) returns (ResultInfo){};
    // live-statue, short connection
    rpc KeepAliveShort(LoginInfo) returns (ResultInfo){};
}

// login parameters
message LoginInfo {
    // user id
    string userid = 1;
    // 用svr的公钥进行加密，登出请求该字段为空
    string passwordEncoded = 2;
    // 时间戳
    int64 timestamp = 3;
    // 设备标识，用于防止恶意登出
    string deviceid = 4;
}

// response type
message ResultInfo {
    int32 resultCode = 1;
    string resultMsg = 2;
}

